2003-09-09  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/forms.c (fl_keyboard): pass it the event to allow it to
	distinguish between KeyPress and KeyRelease events.
	(dispatch_key): new function, factored out of do_keyboard.
	(do_keyboard): Handles KeyRelease events correctly. The KeyPress keysym
	is stored and then dispatched on KeyRelease also, since
	XmbLookupString is undefined on a KeyRelease event.

2003-09-05  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/version.c (fl_print_version): remove workaround for XENIX

	* lib/local.h: remove NO_SOCK (who wants to support old SCO anyway?)

2003-07-31  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/local.h (FL_SIGRET):

	* lib/signal.c (default_signal_handler): use RETSIGTYPE instead of
	FL_SIG_RET

	* lib/errmsg.c (fl_get_syserror_msg): use HAVE_STRERROR

	* lib/sysdep.c (fl_msleep): use HAVE_USLEEP

	* lib/local.h: remove variables DONT_HAVE_USLEEP,
	DONT_HAVE_STRERROR, NO_CONST (handled by AC_C_CONST),
	FL_SIGRET_IS_VOID, FL_SIGRET

	* configure.ac: check for usleep too

2003-05-23  Angus Leeming  <angus.leeming@btopenworld.com>

	* image/rgb_db.c: follow Rouben Rostamian's advice and remove all the
	helper functions that were used to ascertain the name of the RGB color
	before he rewrote fl_lookup_RGBcolor.

	* flimage.h: add a comment to the declaration of fl_init_RGBdatabase
	that is does nothing and is retained for compatibility only.

2003-05-23  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/include/Basic.h: remove declarations of functions
	fl_init_RGBdatabase and fl_lookup_RGBcolor as they are part of
	libflimage, not libforms.

2003-05-30  Angus Leeming  <angus.leeming@btopenworld.com>

	* Changes: renamed as NEWS.
	* COPYING: renamed as COPYING.LIB.
	* 00README: renamed as README.

2003-05-22  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/include/Makefile.am: make sure that forms.h is not distributed

2003-05-21  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
